zareia/zareia.css
header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

header h1 {
    font-size: 64px;
    margin: 0;
}

header img {
    height: 100px;
}

#logo:hover {
    cursor: pointer;
}

.nav-bar {
    display: flex;
    gap: 15px;
    align-items: center;
}

.nav-bar > * {
    border-bottom: 1px solid transparent;
}

.nav-bar > *:hover {
    border-bottom: 1px solid black;
    cursor: pointer;
}

.active-nav {
    border-bottom: 1px solid black;
}


html {
    height: 100%;
    width: 100%;
  }
  
  body {
    display: flex;
    flex-direction: column;
    background-color: #dbe2f5;
    color: #2b66a6; 
  }
  
  div {
    border-style: solid;
  }
  
  #trumpet {
    width: 6em;
    height: auto;
  }

